<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00334F"

    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/amita"
        android:text="Update info COVID-19"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/stop" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/convergence"
        android:text="@string/stop_virus"
        android:textColor="#F5F8F8"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayo_lawan_covid_19"
        android:textColor="#F7FAF9"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:text="@string/total_kasus"
        android:textColor="#F6F610"
        android:textSize="@dimen/_25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvPositive"
        android:layout_width="321dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_semua"
        android:drawableStart="@drawable/tempat"
        android:gravity="center"
        android:text="@string/_9000"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPositive">

        <TextView
            android:id="@+id/tvRecover"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_positive"
            android:gravity="center|center_horizontal"
            android:textSize="@dimen/_20sp"
            android:text="@string/_9000"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/se" />

        <TextView
            android:id="@+id/tvHospitalized"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/_20sp"
            android:background="@drawable/btn_recorver"
            android:gravity="center|center_horizontal"
            android:text="@string/_9000"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ma" />

        <TextView
            android:id="@+id/tvDeath"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_hospot"
            android:gravity="center|center_horizontal"
            android:text="@string/_9000"
            android:textSize="@dimen/_20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/meni" />

        <TextView
            android:id="@+id/btnProvince"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:textSize="@dimen/_20sp"
            android:background="@drawable/btn_provi"
            android:gravity="center|center_horizontal"
            android:text="@string/provinsi"
            android:textColor="@android:color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>